--- a/LCUD_Project/.vscode/settings.json
+++ b/LCUD_Project/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "string": "cpp",
         "ostream": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "cmath": "cpp"
     }
 }
