--- a/LCUD_Project/.vscode/settings.json
+++ b/LCUD_Project/.vscode/settings.json
@@ -3,6 +3,7 @@
         "string": "cpp",
         "ostream": "cpp",
         "*.tcc": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "iostream": "cpp"
     }
 }
